@@ -1,6 +1,10 @@
 weewx change history
 --------------------
 
+The WMR100 driver now calculates SLP in software. This fixes a problem
+with the WMRS200 station, which does not allow the user to set altitude.
+
+
 2.6.3 04/10/14
 
 Hardened the WMR100 driver against malformed packets.
